# qadence-hub

./: .gitignore  .pre-commit-config.yaml  README.md  demo.ipynb  latest  mkdocs.yml  pyproject.toml  sw_test.ipynb  versions.json
demos/: acc_simple.py  acc_torch.py  mlflow_demo.py  train_qnn.py  train_simple.py
docs/: CONTRIBUTING.md  build.md  contributing.md  getting_started.ipynb  index.md  setup.md  structure.md  test.md
hub-v0.2.23/: 404.html  index.html  sitemap.xml
hub-v1.0.0/: 404.html  index.html  sitemap.xml
hub-v1.0.1/: 404.html  index.html  sitemap.xml
main/: 404.html  index.html  objects.inv  sitemap.xml
qadence-common/: README.md  mkdocs.yml  pyproject.toml  versions.json
qadence-commons/: README.md  latest  mkdocs.yml  pyproject.toml  versions.json
qadence-gradient/: README.md  mkdocs.yml  pyproject.toml  versions.json
qadence-libs/: pyproject.toml  versions.json
qadence-measurement/: README.md  latest  mkdocs.yml  pyproject.toml  versions.json
qadence-measurements/: README.md  mkdocs.yml  pyproject.toml  readthedocs.yml  versions.json
qadence-mitigation/: README.md  latest  pyproject.toml  versions.json
qadence-mitigations/: README.md  mkdocs.yml  pyproject.toml  versions.json
qadence-model/: README.md  latest  mkdocs.yml  pyproject.toml  versions.json
qadence-models/: README.md  mkdocs.yml  pyproject.toml
qadence-protocols/: mkdocs.yml  pyproject.toml
qadence-shared/: pyproject.toml
qextras/: __init__.py  protocols.py
test-qadence-libs/: coverage.xml  mkdocs.yml  pyproject.toml  versions.json
tests/: test_shadow.py  (+5 more)
(+1134 files in other folders)
